# docs

./: .gitignore  LICENSE  Makefile  README.md  make.bash  mkdocs.yml  nginx.conf  pyproject.toml  releases.py  tsuru.yaml
.github/workflows/: deploy-gh-pages.yaml
src/: faq.md  index.md
src/admin_guides/: managing_clusters.md  managing_platforms.md  managing_pools.md  managing_roles.md  managing_teams.md
src/contributing/: docker-compose.md
src/getting_started/: architecture.md  install_gke.md  install_minikube.md  overview.md
src/reference/: config.md
src/services/: api.md  build.md  environment_variables.md
src/tsuru_client/: index.md  tsuru.md  tsuru_app.md  tsuru_app_build.md  tsuru_app_create.md  tsuru_app_deploy.md  tsuru_app_deploy_list.md  tsuru_app_deploy_rebuild.md  tsuru_app_deploy_rollback.md  tsuru_app_deploy_rollback_update.md  tsuru_app_grant.md  tsuru_app_info.md  tsuru_app_list.md  tsuru_app_log.md  tsuru_app_metadata.md  tsuru_app_metadata_get.md  tsuru_app_metadata_set.md  tsuru_app_metadata_unset.md  tsuru_app_process.md  tsuru_app_process_update.md  tsuru_app_quota.md  tsuru_app_quota_change.md  tsuru_app_quota_view.md  tsuru_app_remove.md  tsuru_app_restart.md  tsuru_app_revoke.md  tsuru_app_router.md  tsuru_app_router_add.md  tsuru_app_router_list.md  tsuru_app_router_remove.md  tsuru_app_router_update.md  tsuru_app_router_version.md  tsuru_app_router_version_add.md  tsuru_app_router_version_remove.md  tsuru_app_routes.md  tsuru_app_routes_rebuild.md  tsuru_app_run.md  tsuru_app_shell.md  tsuru_app_start.md  tsuru_app_stop.md  (+184 more)
(+12 files in other folders)
